feat: add date filter in search
