# api/openapi.yaml
@@ -10,18 +10,16 @@ servers:
 
 paths:
   /api/v1/token/search:
-    get:
+    post:
       tags: [token]
       summary: Get info for specified token
-      parameters:
-        - in: query
-          name: token
-          schema:
-            type: string
-            minLength: 2
-          required: true
-          description: Token to get info for
       operationId: searchTokenInfo
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SearchTokenInfoRequest'
       responses:
         '200':
           description: Successfully retrieved interest data
@@ -45,6 +43,18 @@ paths:
                 $ref: '#/components/schemas/Error'
 components:
   schemas:
+    SearchTokenInfoRequest:
+      type: object
+      properties:
+        token:
+          type: string
+        start:
+          type: string
+          format: date-time
+        end:
+          type: string
+          format: date-time
+      required: [token, start]
     TokenInfo:
       type: object
       properties:
