# internal/api/v1/oas_schemas_gen.go
@@ -2,6 +2,10 @@
 
 package api
 
+import (
+	"time"
+)
+
 // Ref: #/components/schemas/Error
 type Error struct {
 	Error string `json:"error"`
@@ -17,6 +21,52 @@ func (s *Error) SetError(val string) {
 	s.Error = val
 }
 
+// NewOptDateTime returns new OptDateTime with value set to v.
+func NewOptDateTime(v time.Time) OptDateTime {
+	return OptDateTime{
+		Value: v,
+		Set:   true,
+	}
+}
+
+// OptDateTime is optional time.Time.
+type OptDateTime struct {
+	Value time.Time
+	Set   bool
+}
+
+// IsSet returns true if OptDateTime was set.
+func (o OptDateTime) IsSet() bool { return o.Set }
+
+// Reset unsets value.
+func (o *OptDateTime) Reset() {
+	var v time.Time
+	o.Value = v
+	o.Set = false
+}
+
+// SetTo sets value to v.
+func (o *OptDateTime) SetTo(v time.Time) {
+	o.Set = true
+	o.Value = v
+}
+
+// Get returns value and boolean that denotes whether value was set.
+func (o OptDateTime) Get() (v time.Time, ok bool) {
+	if !o.Set {
+		return v, false
+	}
+	return o.Value, true
+}
+
+// Or returns value if set, or given parameter if does not.
+func (o OptDateTime) Or(d time.Time) time.Time {
+	if v, ok := o.Get(); ok {
+		return v
+	}
+	return d
+}
+
 type SearchTokenInfoInternalServerError Error
 
 func (*SearchTokenInfoInternalServerError) searchTokenInfoRes() {}
@@ -28,6 +78,43 @@ func (*SearchTokenInfoNotFound) searchTokenInfoRes() {}
 type SearchTokenInfoOKApplicationJSON []TokenInfo
 
 func (*SearchTokenInfoOKApplicationJSON) searchTokenInfoRes() {}
+
+// Ref: #/components/schemas/SearchTokenInfoRequest
+type SearchTokenInfoRequest struct {
+	Token string      `json:"token"`
+	Start time.Time   `json:"start"`
+	End   OptDateTime `json:"end"`
+}
+
+// GetToken returns the value of Token.
+func (s *SearchTokenInfoRequest) GetToken() string {
+	return s.Token
+}
+
+// GetStart returns the value of Start.
+func (s *SearchTokenInfoRequest) GetStart() time.Time {
+	return s.Start
+}
+
+// GetEnd returns the value of End.
+func (s *SearchTokenInfoRequest) GetEnd() OptDateTime {
+	return s.End
+}
+
+// SetToken sets the value of Token.
+func (s *SearchTokenInfoRequest) SetToken(val string) {
+	s.Token = val
+}
+
+// SetStart sets the value of Start.
+func (s *SearchTokenInfoRequest) SetStart(val time.Time) {
+	s.Start = val
+}
+
+// SetEnd sets the value of End.
+func (s *SearchTokenInfoRequest) SetEnd(val OptDateTime) {
+	s.End = val
+}
 
 // Ref: #/components/schemas/TokenInfo
 type TokenInfo struct {
